<resources>
    <string name="app_name">Friends Tracker App</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menumain_showContacts">Contact_List</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showAbout">About</string>
    <string name="menumain_generate">Generate data</string>
    <string name="no_contact_message">No Contact Selected</string>
    <string name="edit_button_contact">Button to edit contact details</string>
    <string name="delete_contact_button">button to delete contact</string>
    <string name="contact_item_image">pic of the contact</string>
    <string name="addedit_name_hint">Contact Name: required</string>
    <string name="addedit_email_hint">Contact Email (optional)</string>
    <string name="addedit_birthday_hint">Select Date of Birth</string>
    <string name="addedit_save_contact">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menumain_addMeeting">Add Meeting</string>
    <string name="menumain_viewMeetings">View Meetings</string>
    <string name="no_meeting_message">No Meeting Message</string>
    <string name="mli_meeting_location">Meeting Location</string>
    <string name="meeting_start_time">Start Time</string>
    <string name="meeting_end_time">End Time</string>
    <string name="meeting_title">MeetingTitle</string>
    <string name="meeting_attendees">Meeting Attendees</string>
    <string name="addeditMeeting_title">Meeting title</string>
    <string name="addeditMeeting_location">Add Meeting Location</string>
    <string name="addeditMeeting_starttime">Meeting Start Time</string>
    <string name="addeditMeeting_endtime">Meeting End Time</string>
    <string name="addedit_meeting_addcontacts">Add Contacts</string>
    <string name="addedit_meeting_save">Save</string>
    <string name="menumain_viewcontacts">View Contacts</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_add_edit_meeting">AddEditMeeting</string>
    <string name="menuMain_addcontact">Add Contact</string>
    <string name="hello_world">Hello World</string>
    <string name="meeting_date">Meeting Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_contacts">ViewContactsActivity</string>
    <string name="title">Use the Above + button in toolbar to crate new meeting</string>
    <string name="location">Enter Location</string>
    <string name="addedit_location">Enter Location</string>
    <string name="add_phone_contacts">Add Phone Contacts</string>
    <string name="title_activity_friends_in_meeting">Add Friends for Meeting</string>
    <string name="title_activity_meeting_detail">Meeting Detail</string>
    <string name="title_activity_meeting_friends">meetingFriends</string>
</resources>
