<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menumain_addMeeting"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menumain_addMeeting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_viewContacts"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menumain_viewcontacts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuMain_addContact"
        android:title="@string/menuMain_addcontact"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_viewMeetings"
        android:title="@string/menumain_viewMeetings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menumain_showAbout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_settings"
        android:title="@string/menumain_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menumain_generate"
        android:title="@string/menumain_generate"
        android:visible="false"
        app:showAsAction="never" />


</menu>