<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ammarkureja.friendstrackerapp.controller.AddEditActivityFragment"
    tools:showIn="@layout/activity_add_edit">


    <EditText
        android:id="@+id/addedit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addedit_name_hint"
        android:inputType="textNoSuggestions|textPersonName"
        android:maxLength="64" />

    <EditText
        android:id="@+id/addedit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addedit_email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="50" />

    <EditText
        android:id="@+id/addedit_dateofbirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addedit_birthday_hint"
        android:inputType="date" />

    <Button
        android:id="@+id/addedit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/addedit_save_contact" />
</LinearLayout>

