<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mli_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/meeting_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/mli_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/mli_meeting_location"
        app:layout_constraintRight_toLeftOf="@+id/mli_edit_item"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/mli_edit_item"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/mli_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mli_location"
        tools:text="@string/meeting_start_time"
        app:layout_constraintRight_toLeftOf="@+id/mli_edit_item"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/mli_end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/meeting_end_time"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mli_start_time"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/mli_edit_item"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/mli_number_of_attendees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mli_end_time"
        tools:text="@string/meeting_attendees"
        app:layout_constraintRight_toLeftOf="@+id/mli_edit_item"
        android:layout_marginRight="8dp" />

    <ImageButton
        android:id="@+id/mli_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mli_edit_item"
        android:layout_marginTop="0dp" />

    <ImageButton
        android:id="@+id/mli_edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:layout_constraintRight_toLeftOf="@+id/mli_delete_item"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mli_title" />
</android.support.constraint.ConstraintLayout>